# codice-cam

./: .cursorignore  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  DEBUG_VISUALIZATION_GUIDE.md  PRD.md  README.md  TASKS.md  TECH_STACK.md  build-linux.sh  build-windows.sh  detection_config.txt  kill_processes.sh  test_configurable_detection  test_configurable_detection.cpp  test_debug_live  test_debug_live.cpp  test_debug_window  test_debug_window.cpp  test_live_camera.cpp  test_minimal_debug  test_minimal_debug.cpp  test_simple_detection  test_simple_detection.cpp  test_simple_live  test_simple_live.cpp  test_tuio_stream  test_tuio_stream.cpp
.cursor/: cursorignore
.cursor/rules/: core.mdc  llm_developer_workflow.mdc  python-standards.mdc  refactor.mdc  task-management.mdc
Docs/: Codice Markers.md
docs/: TUIO_INTEGRATION.md
include/: CameraManager.h  ImageProcessor.h  MarkerDetector.h  TUIOBridge.h  TUIOConfig.h  TUIOTestClient.h  TUIOValidator.h
scripts/: setup-dev-environment.sh  setup-simple.sh
src/: CMakeLists.txt  CameraManager.cpp  DebugViewer.cpp  DebugViewer.h  ImageProcessor.cpp  MarkerDetector.cpp  TUIOBridge.cpp  TUIOConfig.cpp  TUIOTestClient.cpp  TUIOValidator.cpp  main.cpp
tests/: CMakeLists.txt
